# casmacat-thot-server

./: Makefile.am  NEWS  README  autogen.sh  configure.ac
docs/: Makefile.am  doxygen.cfg.in
server/: casmacat-htr-server.py  casmacat-server.py  dummy.py  eutt2-es-en.cfg  google-htr-server.py  google-htr.cfg  valgrind-casmacat.supp  xerox-en-es-pl.cfg  xerox-en-es.cfg  xliff-gen.py
server/etc/casmacat/: casmacat.conf
server/etc/casmacat/servers-available/: custom-htr.conf  google-htr.conf  pre-evaluation-full.conf  pre-evaluation-pruned.conf
server/etc/init.d/: casmacat
server/web/: htr.php  index.php  minimal.php
server/web/css/: htr.css  index.css  nouislider.css
server/web/js/: casmacat.js  casmacat.lib.mw.js  catclient.js  catclient.predictive.js  console.js  google-htrclient.js  htr-index.js  htr.js  htrclient.js  index.js  itp-events.js  itp-visualization.js  jquery.editable.itp.js  jquery.editable.js  jquery.rotatecells.js  jquery.sketchable.js  jsketch.js  mg-recognizer.js  module.mousewheel.js  predictivecatclient.js  require.node.js
src/include/casmacat/: Context.h  IAlignmentEngine.h  IConfidenceEngine.h  IHtrEngine.h  IImtEngine.h  IMtEngine.h  IPluginFactory.h  ITextProcessor.h  IUpdateable.h  IWeightUpdateEngine.h  Logger.h  Makefile.am  Plugin.h  WeightUpdateEngine.h  plugin-utils.h  utils.h
src/lib/: DRRWeightUpdate.cpp  HMMaligner.cpp  Makefile.am  casmacat.i  extra_typemaps.i  ibmMax-confidence-estimator.cpp  imt-engine-max-suffix-len.cpp  n-word-prioritizer.cpp  perl-tokenizer.cpp  processor.perl  pycasmacat.i  python-bindings.cpp  random-aligner.cpp  random-confidence-estimator.cpp  random-dictionary.cpp  random-imt-engine.cpp  random-mt-engine.cpp  script.cpp  socketio-handler.cpp  socketio-handler.h  space-tokenizer.cpp  test.py  tokenizer.pl
src/python/: casmacat_models.py  server_utils.py
src/test/: Makefile.am  echo-server-test.cpp
src/tools/: check-tokenizer.py
